--- a/css/styles.css
+++ b/css/styles.css
@@ -437,4 +437,62 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
             0px 1px 1px rgba(46, 47, 66, 0.16),
             0px 2px 1px rgba(46, 47, 66, 0.08)
 }
+/* modal window */
+.overlay-modal {
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+/* justify-content: center;
+align-items: center; */
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
+width: 408px;
+height: 584px;
+padding: 72px 24px 24px 24px;
 
+
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+}
+.modal-text{
+    font-weight: 500;
+        text-align: center;
+        color: #2e2f42;
+        margin-bottom: 16px;
+}
+.label-input{
+ 
+}
+.input-modal{
+width: 100%;
+border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+
+}
+.text-area{
+    width: 100%;
+    height: 138px;
+    border-radius: 4px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+}
+.policy{
+margin-left: 24px;
+width: 338px;
+font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+.link-policy{
+        line-height: 1.33333;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        color: #4d5ae5;
+}
