--- a/css/styles.css
+++ b/css/styles.css
@@ -440,17 +440,10 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* modal window */
 .overlay-modal {
 position: fixed;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
-/* justify-content: center;
-align-items: center; */
-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    background: #fcfcfc;
-width: 408px;
-height: 584px;
-padding: 72px 24px 24px 24px;
-
+top: 0;
+background-color: rgba(46, 47, 66, 0.4);
+width: 100%;
+height: 100%;
 
 }
 
@@ -458,8 +451,28 @@ padding: 72px 24px 24px 24px;
     display: flex;
     flex-direction: column;
     gap: 8px;
-
+    width: 408px;
+    min-height: 584px;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 72px 24px 24px 24px;
 }
+
+ .btn-modal{
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    border-color: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 24px;
+    right: 24px;
+
+ }
 .modal-text{
     font-weight: 500;
         text-align: center;
@@ -467,15 +480,64 @@ padding: 72px 24px 24px 24px;
         margin-bottom: 16px;
 }
 .label-input{
+    margin-bottom: 4px;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
  
 }
+/* icon-name */
+.icon-modalname{
+width: 18px;
+height: 18px;
+fill: #4d5ae5;
+position: absolute;
+left: 19px;
+top: 50%;
+transform: translateY(-50%);
+}
+.iconname-wrap{
+    margin-bottom: 8px;
+    position: relative;
+}
+/* icon-phone */
+.iconphone-wrap {
+    margin-bottom: 8px;
+    position: relative;
+}
+.icon-modalphone{
+    width: 18px;
+        height: 18px;
+        position: absolute;
+        left: 19px;
+        top: 50%;
+        transform: translateY(-50%);
+}
+/* icon-email */
+.iconmail-wrap{
+    margin-bottom: 8px;
+    position: relative;
+}
+.icon-modalemail{
+    width: 18px;
+        height: 18px;
+        position: absolute;
+        left: 19px;
+        top: 50%;
+        transform: translateY(-50%);
+}
 .input-modal{
+padding-left: 38px;
+padding-right: 15px;
 width: 100%;
+height: 40px;
 border-radius: 4px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 
 }
 .text-area{
+    margin-bottom: 18px;
     width: 100%;
     height: 138px;
     border-radius: 4px;
@@ -489,10 +551,30 @@ font-weight: 400;
     line-height: 1.16667;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    margin-bottom: 24px;
 }
 .link-policy{
         line-height: 1.33333;
         text-decoration: underline;
         text-decoration-skip-ink: none;
         color: #4d5ae5;
+} 
+.btn-undermodal{
+    border-radius: 4px;
+    width: 169px;
+    height: 56px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    background-color: #4d5ae5;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    border: none;
+}
+.bottom-btn-modal{
+    display: flex;
+    justify-content: center;
+}.text-area::placeholder{
+    padding: 8px 16px;
 }
