--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,8 @@ height: 100%;
     position: absolute;
     top: 24px;
     right: 24px;
-
+    display: flex;
+    align-items: center;
  }
 .modal-text{
     font-weight: 500;
@@ -536,6 +537,10 @@ border-radius: 4px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 
 }
+.input-modal:hover,
+.input-modal:focus{
+border: 1px solid #4d5ae5
+}
 .text-area{
     margin-bottom: 18px;
     width: 100%;
@@ -543,15 +548,14 @@ border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
         border: 1px solid rgba(46, 47, 66, 0.4);
 }
-.policy{
-margin-left: 24px;
-width: 338px;
-font-weight: 400;
+.check-policy {
+    width: 338px;
+    font-weight: 400;
     font-size: 12px;
     line-height: 1.16667;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    margin-bottom: 24px;
+    padding-left: 10px;
 }
 .link-policy{
         line-height: 1.33333;
@@ -574,7 +578,23 @@ font-weight: 400;
 }
 .bottom-btn-modal{
     display: flex;
+    margin-top: 24px;
     justify-content: center;
 }.text-area::placeholder{
     padding: 8px 16px;
+}
+.check-modal{
+    width: 16px;
+    height: 16px;
+}
+.checkpolicy-modal{
+    display: flex;
+    align-items: center;
+}
+.btn-modal:hover,
+.btn-modal:focus,
+.modal-iconeclose:focus,
+.modal-iconeclose:hover{
+    background-color: #404bbf;
+    fill: #fff;
 }
