--- a/css/styles.css
+++ b/css/styles.css
@@ -498,22 +498,23 @@ fill: #ffffff;
 .label-input{
     margin-bottom: 4px;
         font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
+        display: block;
  
 }
 /* icon-name */
 .icon-modalname{
-width: 18px;
-height: 18px;
-fill: #4d5ae5;
-position: absolute;
-left: 19px;
-top: 50%;
-transform: translateY(-50%);
+    width: 18px;
+        height: 24px;
+        position: absolute;
+        left: 16px;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.iconname-wrap{
+.class-for-input{
     margin-bottom: 8px;
     position: relative;
 }
@@ -524,11 +525,12 @@ transform: translateY(-50%);
 }
 .icon-modalphone{
     width: 18px;
-        height: 18px;
+        height: 24px;
         position: absolute;
-        left: 19px;
+        left: 16px;
         top: 50%;
         transform: translateY(-50%);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* icon-email */
 .iconmail-wrap{
@@ -537,16 +539,17 @@ transform: translateY(-50%);
 }
 .icon-modalemail{
     width: 18px;
-        height: 18px;
+        height: 24px;
         position: absolute;
-        left: 19px;
+        left: 16px;
         top: 50%;
         transform: translateY(-50%);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-modal{
 padding-left: 38px;
 padding-right: 15px;
-width: 100%;
+width: 100%;    
 height: 40px;
 border-radius: 4px;
 border: 1px solid rgba(46, 47, 66, 0.4);
@@ -558,7 +561,8 @@ border: 1px solid rgba(46, 47, 66, 0.4);
 .text-area:hover,
 .text-area:focus,
 .text-area:active{
-border: 1px solid #4d5ae5
+border: 1px solid #4d5ae5;
+fill: #4D5AE5;
 }
 .text-area{
     margin-bottom: 18px;
