--- a/css/styles.css
+++ b/css/styles.css
@@ -669,13 +669,20 @@ border-radius: 2px;
 
 /* footer-modal */
 .footer-email{
+    color: #ffffff;
+    font-size: 12px;
     padding: 8px 16px;
+    line-height: 2;
+    letter-spacing: 0.04em;
     background-color: transparent;
     border: 1px solid #fff;
         border-radius: 4px;
         width: 264px;
         height: 40px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+.input::placeholder{
+    color: #ffffff;
 }
 .footer-modaltext{
     font-weight: 500;
@@ -696,7 +703,7 @@ border-radius: 2px;
     justify-content: center;
     border-radius: 4px;
         padding: 8px 24px;
-       min-width: 165px;
+    min-width: 165px;
         height: 40px;
         background-color: #4d5ae5;
         border: none;
@@ -706,7 +713,6 @@ border-radius: 2px;
             letter-spacing: 0.04em;
             text-align: center;
             color: #fff;
-            margin-top: 16px;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             cursor: pointer;
             position: relative;
@@ -720,10 +726,11 @@ border-radius: 2px;
 .footer-iconsend{
     fill: #fff;
     position: absolute;
+    top: 10px;
+    right: 24px;
     margin-left: 16px;
 }
 .footer-form{
     display: flex;
     gap: 24px;
-    justify-content: baseline;
 }
