--- a/css/styles.css
+++ b/css/styles.css
@@ -512,23 +512,8 @@ fill: #ffffff;
 .iconname-wrap{
     margin-bottom: 8px;
 }
-.icon-modalname{
-    width: 18px;
-        height: 24px;
-        position: absolute;
-        left: 16px;
-        top: 50%;
-        transform: translateY(-50%);
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.class-for-input{
-    position: relative;
-}
-/* icon-phone */
-.iconphone-wrap {
-    margin-bottom: 8px;
-    position: relative;
-}
+.icon-modalname,
+.icon-modalemail,
 .icon-modalphone{
     width: 18px;
         height: 24px;
@@ -538,19 +523,17 @@ fill: #ffffff;
         transform: translateY(-50%);
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.class-for-input {
+    position: relative;
+}
+/* icon-phone */
+.iconphone-wrap {
+    margin-bottom: 8px;
+}
+
 /* icon-email */
 .iconmail-wrap{
     margin-bottom: 8px;
-    position: relative;
-}
-.icon-modalemail{
-    width: 18px;
-        height: 24px;
-        position: absolute;
-        left: 16px;
-        top: 50%;
-        transform: translateY(-50%);
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-modal{
 padding-left: 38px;
@@ -568,7 +551,6 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .input-modal:focus,
 .input-modal:active,
 .text-area:hover,
-.text-area:focus,
 .icon-modalname:hover,
 .icon-modalname:focus,
 .icon-modalemail:hover,
@@ -578,6 +560,10 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 border-color: #4D5AE5;
 fill: #4D5AE5;
 }
+.text-area:focus{
+    border-color: #4D5AE5;
+}
+
 .text-area{
     width: 100%;
     height: 120px;
@@ -593,6 +579,9 @@ fill: #4D5AE5;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4)
        
+}
+.user-privacy:focus + .modal-policylabel .icon-modal-check{
+fill: #4D5AE5;
 }
 
 .check-policy {
@@ -611,33 +600,29 @@ fill: #4D5AE5;
 } 
 .btn-undermodal{
     border-radius: 4px;
-    width: 169px;
+min-width: 169px;
     height: 56px;
-    font-weight: 500;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #fff;
-    background-color: #4d5ae5;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    color: #ffffff;
     cursor: pointer;
+    background-color: #4D5AE5;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .bottom-btn-modal{
-    display: flex;
-    margin-top: 24px;
-    justify-content: center;
-    cursor: pointer;
+    display: block;
+        padding-left: 90px;
+        font-size: 16px;
+        cursor: pointer;
+        
 }
 /* .text-area::placeholder{
     padding: 8px 16px;
 } */
-.modal-policylabel{
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-
-}
 .span-modal{
     width: 16px;
     height: 16px;
@@ -668,7 +653,16 @@ border-radius: 2px;
     margin-bottom: 24px;    
   
 }
-
+.textlabel-accept{
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        margin-left: 8px;
+}
+.modal-policylabel{
+    display: flex;
+}
 /* footer-modal */
 .footer-email{
     color: #ffffff;
