--- a/css/styles.css
+++ b/css/styles.css
@@ -484,10 +484,9 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
  .btn-modal:focus{
 background-color: #404bbf;
 border: none;
-fill: #ffffff;
  }
-.modal-iconeclose:hover,
-.modal-iconeclose:focus{
+.btn-modal:hover .modal-iconeclose,
+.btn-modal:focus .modal-iconeclose{
 fill: #ffffff;
 }
  .modal-icon{
