--- a/css/styles.css
+++ b/css/styles.css
@@ -598,6 +598,9 @@ fill: #4D5AE5;
         padding-left: 4px;
 } 
 .btn-undermodal{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 4px;
 min-width: 169px;
     height: 56px;
@@ -612,13 +615,13 @@ min-width: 169px;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.bottom-btn-modal{
+/* .bottom-btn-modal{
     display: block;
         padding-left: 90px;
         font-size: 16px;
         cursor: pointer;
         
-}
+} */
 /* .text-area::placeholder{
     padding: 8px 16px;
 } */
