--- a/css/styles.css
+++ b/css/styles.css
@@ -485,8 +485,8 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
 background-color: #404bbf;
 border: none;
  }
-.btn-modal:hover .modal-iconeclose,
-.btn-modal:focus .modal-iconeclose{
+.btn-modal:hover .modal-icon,
+.btn-modal:focus .modal-icon{
 fill: #ffffff;
 }
  .modal-icon{
@@ -547,7 +547,6 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .input-modal:hover,
-.input-modal:focus,
 .input-modal:active,
 .text-area:hover,
 .icon-modalname:hover,
@@ -559,7 +558,10 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 border-color: #4D5AE5;
 fill: #4D5AE5;
 }
-.text-area:focus{
+.input-modal:focus{
+  border-color: #4D5AE5;
+}
+.text-area:focus{  
     border-color: #4D5AE5;
 }
 
