--- a/css/styles.css
+++ b/css/styles.css
@@ -556,8 +556,16 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .icon-modalphone:hover,
 .icon-modalphone:focus{
 border-color: #4D5AE5;
-fill: #4D5AE5;
 }
+.input-modal:hover + .icon-modalname,
+.input-modal:focus + .icon-modalname,
+.input-modal:hover + .icon-modalemail,
+.input-modal:focus + .icon-modalemail,
+.input-modal:hover + .icon-modalphone,
+.input-modal:focus + .icon-modalphone{
+    fill: #4D5AE5;
+}
+
 .input-modal:focus{
   border-color: #4D5AE5;
 }
