--- a/css/styles.css
+++ b/css/styles.css
@@ -438,6 +438,10 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* modal window */
 .overlay-modal {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
 position: fixed;
 top: 0;
 background-color: rgba(46, 47, 66, 0.4);
@@ -653,8 +657,10 @@ border-radius: 2px;
     border: none;
     fill: #f4f4fd;
 }
-.is-open{
-    visibility: hidden;
+.overlay-modal.is-open{
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .checkpolicy-modal{
