--- a/css/styles.css
+++ b/css/styles.css
@@ -485,7 +485,9 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
  .btn-modal:hover,
- .btn-modal:focus {
+ .btn-modal:focus,
+ .btn-undermodal:hover,
+ .btn-undermodal:focus{
 background-color: #404bbf;
 border: none;
  }
@@ -673,10 +675,10 @@ border-radius: 2px;
 }
 .modal-policylabel{
     font-size: 12px;
-        line-height: 1.16667;
         letter-spacing: 0.04em;
         color: #8e8f99;
         margin-left: 8px;
+        line-height: 1.17;
 }
 /* footer-modal */
 .footer-email{
