--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
 }
 
 .container {
-        max-width: 1158px;
+        max-width: 100%;
+        max-width: 320px;
         padding: 0 15px;
         margin: 0 auto;
     }
@@ -65,6 +66,7 @@ position: relative;
     align-items: center;
     justify-content:space-between;
 }
+
 .address-list{
     display: flex;
     align-items: center;
@@ -86,6 +88,8 @@ position: relative;
     margin: 0 auto;
 
 }
+
+
 
 .hero-title{
    color:  #ffff;
@@ -255,24 +259,79 @@ background-color: #31d0aa;
 }
 .hidden-list{
     display: flex;
-    gap: 24px;
+    /* gap: 24px; */
+    gap: 72px;
+    flex-wrap: wrap;
 }
 .features-text {
-    font-size: 16px;
+    /* font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.02em; */
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
 }
 .h-features-title{
-    font-weight: 500;
+    /* font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
     font-size: 20px;
     margin-bottom: 8px;
+    text-align: center; */
+    font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11111;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
 }
 .hidden-item{
-    width: calc((100% - 72px)/4);
+    /* width: calc((100% - 72px)/4); */
+    width: 100%;
 }
+/* .features-icon{
+    border: 1px solid #8e8f99;
+        border-radius: 4px;
+        height: 112px;
+     margin-bottom: 8px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     background-color: #f4f4fd;
+} */
+@media (min-width: 320px){
+.svg-hidden{
+    visibility: hidden;
+}
+}
+@media (min-width: 768px){
+    .container{
+        max-width: 768px;
+    }
+    .hidden-item{
+        width: calc((100% - 72px)/2);
+    }
+    .h-features-title{
+        font-weight: 700;
+            font-size: 36px;
+            line-height: 1.11111;
+            letter-spacing: 0.02em;
+    }
+    .features-text{
+        font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+    }
+}
+@media (min-width: 1158px){
+    .container {
+            max-width: 1158px;
+            padding: 15px;
+        }
 .features-icon{
     border: 1px solid #8e8f99;
         border-radius: 4px;
@@ -283,6 +342,33 @@ background-color: #31d0aa;
      justify-content: center;
      background-color: #f4f4fd;
 }
+.svg-hidden {
+    visibility: visible;
+}
+ .hidden-item {
+     width: calc((100% - 72px)/4);
+ }
+ .h-features-title {
+     font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    font-size: 20px;
+    margin-bottom: 8px;
+    text-align: center;}
+
+.hidden-list {
+    gap: 24px;
+}
+.features-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+}
+
+
+    
 
 /* section 3 */
 
@@ -361,7 +447,7 @@ border-radius: 50%;
 .team-iconlink:focus{
 background-color: #404bbf;
 }
-    
+  
 /* section 4 */
 .portfolio{
     padding:120px 0 ;
@@ -746,3 +832,5 @@ color: #fff;
     display: flex;
     gap: 24px;
 }
+
+
