--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,7 @@
     box-sizing: border-box;
 }
 
-.container {
-        max-width: 100%;
-        max-width: 320px;
-        padding: 0 15px;
-        margin: 0 auto;
-    }
+
     img{
        display: block; 
     }
@@ -30,6 +25,12 @@ body{
 p,h1,h2,h3,h4,h5,h6,ul,li{
     margin: 0;
     padding: 0;
+}
+.container {
+    max-width: 100%;
+    max-width: 320px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 /* header */
 .header{
@@ -302,15 +303,18 @@ background-color: #31d0aa;
      justify-content: center;
      background-color: #f4f4fd;
 } */
-@media (min-width: 320px){
+@media screen and (min-width: 320px){
 .svg-hidden{
     visibility: hidden;
 }
 }
-@media (min-width: 768px){
+@media screen and (min-width: 768px){
     .container{
         max-width: 768px;
     }
+        .hidden-list {  
+            gap: 72px 24px;       
+        }
     .hidden-item{
         width: calc((100% - 72px)/2);
     }
@@ -327,7 +331,7 @@ background-color: #31d0aa;
             letter-spacing: 0.02em;
     }
 }
-@media (min-width: 1158px){
+@media screen and (min-width: 1158px){
     .container {
             max-width: 1158px;
             padding: 15px;
@@ -376,10 +380,25 @@ background-color: #31d0aa;
  padding: 32px 0;
 }
 .team-list{
+/* display: flex; */
 display: flex;
-    gap: 24px;
+flex-wrap: wrap;
+    /* gap: 24px; */
+    gap: 72px;
 }
-
+@media screen and (min-width: 768px){
+   .team-list{
+  gap: 64px 24px;
+  align-items: center;
+  justify-content: center;
+   }
+}
+@media screen and (min-width: 1158px){
+    .team-list {
+            display: flex;
+            gap: 24px;
+        }
+}
 .list-container{
     padding: 32px 0; 
 }
@@ -482,14 +501,37 @@ background-color: #404bbf;
 }
 .portfolio-list{
     display: flex;
-    gap: 48px 24px;
+    /* gap: 48px 24px; */
+    gap: 48px;
     flex-wrap: wrap;
 }
 .portfolio-item{
-width: calc((100% - 48px) / 3);
+/* width: calc((100% - 48px) / 3); */
+width: 100%;
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px){
+    .portfolio-item {
+            width: calc((100% - 48px) / 2);
+        }
+                .portfolio-list {
+
+                    gap: 48px 24px;
+                
+                }
+}
+@media screen and (min-width: 1158px){
+    .portfolio-item {
+            width: calc((100% - 48px) / 3);
+        }
+                  .portfolio-list {
+        
+                      gap: 48px 24px;
+        
+                  }
+    
+}
 .fortfolio-overlay{
     position: relative;
     overflow: hidden;
